@@ -182,12 +182,12 @@ public class SqlTplDynamicExecutorTest extends DataSourceTestBase {
         PaginationResults<User> us = userMapper.selectByAge2Page(age, 0, limit);
         System.out.println(us.getResultSize());
         System.out.println(us.getPageResults());
-        assertEquals(us.getResultSize(), new Integer(limit));
+        assertEquals(us.getResultSize(), Integer.valueOf(limit));
 
         us = userMapper.selectByAge2Page(age, page);
         System.out.println(us.getResultSize());
         System.out.println(us.getPageResults());
-        assertEquals(us.getResultSize(), new Integer(limit));
+        assertEquals(us.getResultSize(), Integer.valueOf(limit));
     }
 
     @Test
@@ -209,13 +209,13 @@ public class SqlTplDynamicExecutorTest extends DataSourceTestBase {
         System.out.println(us.getResultSize());
         System.out.println(us.getPageResults());
 
-        assertEquals(us.getResultSize(), new Integer(limit));
+        assertEquals(us.getResultSize(), Integer.valueOf(limit));
 
         us = userMapper.select2Page(0, limit);
         System.out.println(us.getResultSize());
         System.out.println(us.getPageResults());
 
-        assertEquals(us.getResultSize(), new Integer(limit));
+        assertEquals(us.getResultSize(), Integer.valueOf(limit));
 
     }
 
